<resources>
    <string name="app_name">weather_forecast</string>
    <string name="start_city">Москва</string>
    <string name="degree_zero">0°C</string>
    <string name="degree_of_celsius">°C</string>
    <string name="condition_default">Облачно</string>
    <string name="reload">Reload</string>
    <string name="city_coordinates">lt/ln: %s, %s"</string>
    <string name="error">Error</string>
    <string name="temperature_label">Температура</string>
    <string name="feels_like_label">Ощущается</string>
    <string name="weather">Weather</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="only_warm">только выше 0°C</string>
    <string name="uri_city_picture">https://freepngimg.com/thumb/city/36275–3-city-hd.png</string>
    <string name="pattern_date">yyyy-MM-dd HH:mm:ss</string>
    <string name="search_city">Фильтр по городу</string>
    <string name="key_yandex_map">2c08b69e-78b6-488e-bb65-4b7915eb58f7</string>
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключен</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
</resources>