<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".view.details.DetailsFragment">
       
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_header_icon_height"
        android:scaleType="fitXY"
        android:id="@+id/header_icon" />

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cityName"
        android:textSize="@dimen/city_text_size"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:padding="@dimen/padding_elements"
        android:text="@string/start_city"/>

    <TextView
        android:id="@+id/cityCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:padding="@dimen/padding_elements"
        tools:text="lt/ln: 55.755826, 37.617299900000035" />

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="@dimen/padding_elements"
        android:layout_gravity="center"
        android:textSize="@dimen/conditional_size"
        android:text="@string/temperature_label"/>


    <TextView
        android:id="@+id/temperatureValue"
        android:layout_width="wrap_content"
        android:layout_height="7dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/degree_zero"
        android:textColor="@color/white"
        android:textSize="@dimen/degree_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temperatureConditional"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:padding="@dimen/padding_elements"
        android:textSize="@dimen/degree_feels_size"
        android:text="@string/condition_default"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/weather_icon_width"
        android:layout_height="@dimen/weather_icon_height"
        android:layout_gravity="center"
        tools:srcCompat="@drawable/ic_bkn_d"
        android:id="@+id/weatherIcon" />


    <TextView
        android:id="@+id/feelsLikeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_like_label"
        android:layout_gravity="center"
        android:padding="@dimen/padding_elements"
        android:textSize="@dimen/conditional_size"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/feelsLikeValue"
        android:layout_width="wrap_content"
        android:layout_height="7dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/degree_zero"
        android:textColor="@color/white"
        android:textSize="@dimen/degree_feels_size"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/loading_background"
        android:visibility="gone"
        android:layout_gravity="center"

        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop" />

    </FrameLayout>

</LinearLayout>